--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>cs panel</title>
   </head>
   <body style="background-color: #15202b";>
     <noscript>You need to enable JavaScript to run this app.</noscript>
